[tool.poetry]
name = "hpc-conda-envs"
version = "0.1.0"
description = "Tool for build conda environments shared through environment modules"
authors = ["Jeff Terstriep <jefft@illinois.edu>"]
readme = "README.md"
packages = [{include = "hpc_conda_envs"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hpcenvs = "hpc_conda_envs.main:main"
